--- a/styles.css
+++ b/styles.css
@@ -29,11 +29,35 @@ background:url(images/bg2.jpg) bottom repeat-x;}
 	padding-top: 41px;
 }
 
-#header { 
-width:100%;
-background: url(images/header.jpg) left top no-repeat;
-height: 600px;
+a {
+	display: inline-block; /* Встановлюємо елемент як блок */
+	text-decoration: none; /* Вимикаємо підкреслення посилання */
+  }
+  
+  a img {
+	width: 200px; /* Змінюємо розмір картинки за потребою */
+	height: auto; /* Зберігаємо пропорції */
+  }
+  
+
+#header {
+    position: relative;
+    width: 100%;
+    height: 600px;
+    background: url(images/header.jpg) left top no-repeat;
 }
+
+/*#header::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60;
+    height: 80;
+    background: url(images/header1.jpg) left top no-repeat;
+    opacity: 1; 
+}*/
+
 
 #logo {	font-family: Arial, Helvetica, sans-serif;
 		color:#FFFFFF;
